[package]
name = "orcrist"
version = "0.1.0"
authors = ["Erich Gubler <erichdongubler@gmail.com>"]
edition = "2018"

[features]
default = ["derive"]

# Enables derive macros exposed via `orcrist-derive`
derive = ["orcrist-derive"]

[dependencies]
named_type_derive = { git = "https://github.com/erichdongubler/named_type", branch = "update-deps" }
orcrist-derive = { path = "../orcrist-derive", optional = true }

[dev-dependencies]
byteorder = "1.3.2"
orcrist-derive = { path = "../orcrist-derive" }
